# portfolio

./: Диаграмма без названия.drawio.html
Banderogoose/: README.md  main.py  pyproject.toml
data-science-project-dev/: .gitignore  pyproject.toml  run.sh
data-science-project-dev/data_project_chat/base/: apps.py  views.py
data-science-project-dev/data_project_chat/base/migrations/: 0002_answer_chat_question_request_remove_chatsession_user_and_more.py
data-science-project-dev/data_project_chat/base/static/CSS/: EditProfile.css  main.css
data-science-project-dev/data_project_chat/base/static/JS/: matrix.js
data-science-project-dev/data_project_chat/base/templates/base/: deactivate_account.html  edit_profile.html  index.html  login.html  registration.html
data-science-project-dev/data_project_chat/chats/: data_extractor.py  views.py
data-science-project-dev/data_project_chat/chats/migrations/: 0001_initial.py  0002_remove_answer_question_answer_chat_alter_chat_user_and_more.py  0003_request_chat.py
data-science-project-dev/data_project_chat/chats/templates/chats/: base.html  chat_interaction.html  index.html
data-science-project-dev/data_project_chat/data_project_chat/: settings.py  urls.py  wsgi.py
data-science-project-dev/data_project_chat/power_chat/: apps.py  models.py  power_model.py  urls.py  views.py
data-science-project-dev/data_project_chat/power_chat/migrations/: 0002_remove_powerchat_answer_remove_powerchat_question_and_more.py  0003_powerchat_conversation_id.py  0004_remove_powerchatmessage_chat_powerchatmessage_user_and_more.py
(+74 files in other folders)
